--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-CONNECTION_STRING = mysql://root:1234@localhost:3306/site_receitas
+CONNECTION_STRING = mysql://root:123@localhost:3306/site_restaurantes
