--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: Docker Compose Deploy
+name: Docker Compose
 
 on:
   push:
@@ -10,36 +10,45 @@ on:
       - 'docker-compose.yml'
 
 jobs:
-  deploy:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      mysql: ${{ steps.filter.outputs.mysql }}
+      docker_compose: ${{ steps.filter.outputs.docker_compose }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'NuvemBack/**'
+            mysql:
+              - 'pasta/**'
+            docker_compose:
+              - 'docker-compose.yml'
+
+  build-and-push:
+    needs: changes
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create .env file
+      - name: Login to Docker Hub
+        if: ${{ needs.changes.outputs.backend == 'true' || needs.changes.outputs.mysql == 'true' }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Set up Docker Compose
         run: |
-          echo "DB_HOST=db" >> .env
-          echo "DB_USER=cab" >> .env
-          echo "DB_PASS=vm-pass" >> .env
-          echo "DB_NAME=site_restaurantes" >> .env
-          echo "DB_PORT=3306" >> .env
-          echo "MYSQL_ROOT_PASSWORD=password" >> .env
-          echo "MYSQL_DATABASE=site_restaurantes" >> .env
-          echo "MYSQL_USER=cab" >> .env
-          echo "MYSQL_PASSWORD=vm-pass" >> .env
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Start containers
+      - name: Deploy with Docker Compose
         run: |
           docker-compose pull
-          docker-compose up -d --build
-
-      - name: Check running containers
-        run: docker-compose ps
-
-      - name: Check container logs
-        run: |
-          docker-compose logs app
-          docker-compose logs db
+          docker-compose up -d
