--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -50,5 +50,5 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-          docker-compose pull
+          docker-compose push
           docker-compose up -d
