--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Create Backend Dockerfile
         if: needs.changes.outputs.backend == 'true'
         run: |
-          cat > ./NuvemBack/NuvemBack/Dockerfile << 'EOF'
+          cat > ./NuvemBack/Dockerfile << 'EOF'
           FROM node:21
           WORKDIR /usr/src/app
           COPY package*.json ./
@@ -70,7 +70,7 @@ jobs:
         if: needs.changes.outputs.backend == 'true'
         uses: docker/build-push-action@v2
         with:
-          context: ./NuvemBack/NuvemBack
+          context: ./NuvemBack
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nuvemback:latest
 
