--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -49,9 +49,8 @@ jobs:
           cat > ./NuvemBack/Dockerfile << 'EOF'
           FROM node:21
           WORKDIR /usr/src/app
-          COPY package*.json ./
+          COPY NuvemBack/. .
           RUN npm install
-          COPY . .
           EXPOSE 8000
           CMD ["npm", "start"]
           EOF
