--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -49,9 +49,11 @@ jobs:
           cat > ./NuvemBack/Dockerfile << 'EOF'
           FROM node:21
           WORKDIR /usr/src/app
-          COPY NuvemBack/. .
+          COPY package*.json ./
           RUN npm install
+          COPY . .
           EXPOSE 8000
+          CMD ["cd", "NuvemBack"]
           CMD ["npm", "start"]
           EOF
 
