--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./NuvemBack:/usr/src/app
     working_dir: /usr/src/app
-    command: bash -c "cd NuvemBack && npm install && npm start"
+    command: bash -c "npm install && npm start"
     ports:
       - "8000:8000"
     environment:
